[tool.poetry]
name = "goit-python-web-09-hw"
version = "0.1.0"
description = ""
authors = ["VolodymyrKoz <vkill7595@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
itemadapter = "^0.8.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
